--- a/src/sass/_base.scss
+++ b/src/sass/_base.scss
@@ -9,3 +9,12 @@ html {
     padding: 0;
     margin: 0;
 }
+
+li {
+    list-style: none;
+}
+
+a:link, a:visited {
+    text-decoration: none;
+    color: #000;
+}
