--- a/src/sass/_nav.scss
+++ b/src/sass/_nav.scss
@@ -1,7 +1,11 @@
 .nav {
+    position: fixed;
+    top: 0;
+    left: 0;
     width: 100%;
     height: 5rem;
     background: #fff;
+    z-index: 999;
     text-transform: uppercase;
     border-top: .5px solid #aaaaaa;
     display: flex;
@@ -29,16 +33,30 @@
 
             &:hover {
                 background: #aaaaaa;
+                border-radius: 5px;
+
+                a:link, a:visited {
+                    color: #fff;
+                }
+            }
+
+            &:hover .nav__dropdown {
+                right: -7.6rem;
+                opacity: 1;
             }
         }
     }
 
     .nav__dropdown {
         position: absolute;
-        top: 5rem;
-        left: 0;
+        top: 4.2rem;
+        right: -35rem;
+        opacity: 0;
         width: 250px;
+        background: #000;
         border-top: .5px solid #aaaaaa;
+        border-radius: 5px;
+        transition: all 300ms ease-in-out;
 
         .nav__dropdown-link {
             margin: .5rem;
@@ -46,6 +64,7 @@
 
             &:hover {
                 background: #aaaaaa;
+                border-radius: 5px;
             }
         }
     }
