--- a/src/sass/_nav.scss
+++ b/src/sass/_nav.scss
@@ -68,4 +68,112 @@
             }
         }
     }
+
+    .hamburger {
+        display: none;
+        position: relative;
+        width: 45px;
+        height: 28px;
+        cursor: pointer;
+
+        &__bar {
+            position: absolute;
+            left: 0;
+            width: 26px;
+            height: 3px;
+            background: #000;
+
+            &:nth-child(1) {
+                top: 0;
+            }
+
+            &:nth-child(2) {
+                top: 8px;
+            }
+
+            &:nth-child(3) {
+                top: 16px;
+            }
+        }
+    }
+
+    .overlay {
+        position: absolute;
+        top: 0;
+        right: -100%;
+        height: 100vh;
+        width: 80vw;
+        background: #0E538F;
+        display: flex;
+        flex-direction: column;
+        transition: right 300ms ease-in-out;
+
+        &__close {
+            width: 100%;
+            border-bottom: .5px solid #fff;
+        }
+        &__close-icon {
+            width: 100%;
+            position: relative;
+            width: 45px;
+            height: 28px;
+            margin-bottom: 2rem;
+            cursor: pointer;
+            
+
+            .overlay__close-bar {
+                position: absolute;
+                top: 1.3rem;
+                margin: .5rem;
+                left: 0;
+                width: 26px;
+                height: 2px; 
+                background: #fff;
+
+                &:nth-child(1) {
+                    transform: rotate(45deg);
+                }
+
+                &:nth-child(2) {
+                    transform: rotate(-45deg);
+                }
+            }
+        }
+
+
+        &.open {
+            right: 0;
+        }
+
+        &__list {
+            width: 100%;
+        }
+
+        &__list-item {
+            padding: 15px;
+            border-bottom: .2px solid #fff;
+
+            a:link, a:visited {
+                color: #fff;
+            }
+        }
+    }
+
+    .overlay__dropdown {
+        &__list-item {
+            padding: 15px;
+        }
+    }
+}
+
+@media (max-width: 700px) {
+    .nav {
+        .hamburger {
+            display: block;
+        }
+
+        &__list {
+            display: none;
+        }
+    }
 }
