--- a/src/sass/_nav.scss
+++ b/src/sass/_nav.scss
@@ -108,13 +108,6 @@
         flex-direction: column;
         transition: right 300ms ease-in-out;
 
-        &__click {
-            position: absolute;
-            right: 1rem;
-            font-size: 1.5rem;
-            color: #fff;
-        }
-
         &__close {
             width: 100%;
             border-bottom: .5px solid #fff;
@@ -156,11 +149,47 @@
             width: 100%;
 
             .overlay__list-item {
+                position: relative;
                 padding: 15px;
                 border-bottom: .2px solid #fff;
     
                 a:link, a:visited {
                     color: #fff;
+                }
+
+                .chevron {
+                    position: absolute;
+                    right: 1rem;
+                    top: 1.1rem;
+                    width: 25px;
+                    height: 40px;
+                    font-size: 1.5rem;
+                    cursor: pointer;
+                    color: #fff;
+                    transition: all 50ms ease-in-out;
+
+                    &.chevron-show {
+                        top: .7rem;
+                        right: 2rem;
+                        transform: rotate(90deg);
+                    }
+        
+                    &__bar {
+                        position: absolute;
+                        width: 15px;
+                        height: 2px;
+                        background: #fff;
+
+                        &:nth-child(1) {
+                            top: 0;
+                            transform: rotate(45deg);
+                        }
+
+                        &:nth-child(2) {
+                            top: 10px;
+                            transform: rotate(-45deg);
+                        }
+                    }
                 }
             }
         }
