--- a/src/sass/_nav.scss
+++ b/src/sass/_nav.scss
@@ -41,7 +41,7 @@
             }
 
             &:hover .nav__dropdown {
-                right: -7.6rem;
+                right: -12rem;
                 opacity: 1;
             }
         }
@@ -52,9 +52,9 @@
         top: 4.2rem;
         right: -35rem;
         opacity: 0;
-        width: 250px;
-        background: #000;
-        border-top: .5px solid #aaaaaa;
+        width: 320px;
+        background: #0E538F;
+        border-top: .5px solid #E0E0E0;
         border-radius: 5px;
         transition: all 300ms ease-in-out;
 
@@ -63,7 +63,7 @@
             padding: 15px 15px;
 
             &:hover {
-                background: #aaaaaa;
+                background: #E0E0E0;
                 border-radius: 5px;
             }
         }
@@ -201,6 +201,7 @@
             &.show {
                 opacity: 1;
                 height: initial;
+                margin-top: 1rem;
             }
 
             .overlay__dropdown-link {
