--- a/src/sass/_base.scss
+++ b/src/sass/_base.scss
@@ -18,3 +18,12 @@ a:link, a:visited {
     text-decoration: none;
     color: #000;
 }
+
+h1, h2, h3, h4, h5, h6 {
+    font-family: 'Roboto Condensed', sans-serif;
+    font-weight: 800;
+}
+
+li, a, p {
+    font-family: 'Roboto Condensed', sans-serif;
+}
