--- a/src/sass/_nav.scss
+++ b/src/sass/_nav.scss
@@ -5,6 +5,7 @@
     width: 100%;
     height: 5rem;
     background: #fff;
+    font-weight: 700;
     z-index: 999;
     text-transform: uppercase;
     border-top: .5px solid #aaaaaa;
@@ -32,16 +33,12 @@
             padding: 25px 20px;
 
             &:hover {
-                background: #aaaaaa;
+                background: #E0E0E0;
                 border-radius: 5px;
-
-                a:link, a:visited {
-                    color: #fff;
-                }
             }
 
             &:hover .nav__dropdown {
-                right: -12rem;
+                right: -12.5rem;
                 opacity: 1;
             }
         }
@@ -52,7 +49,7 @@
         top: 4.2rem;
         right: -35rem;
         opacity: 0;
-        width: 320px;
+        width: 315px;
         background: #0E538F;
         border-top: .5px solid #E0E0E0;
         border-radius: 5px;
@@ -62,9 +59,18 @@
             margin: .5rem;
             padding: 15px 15px;
 
+            a:link, a:visited {
+                color: #fff;
+            }
+            
+
             &:hover {
                 background: #E0E0E0;
                 border-radius: 5px;
+
+                a:link, a:visited {
+                    color: #000;
+                }
             }
         }
     }
@@ -102,7 +108,7 @@
         top: 0;
         right: -100%;
         height: 100vh;
-        width: 80vw;
+        width: 100vw;
         background: #0E538F;
         display: flex;
         flex-direction: column;
@@ -111,6 +117,8 @@
         &__close {
             width: 100%;
             border-bottom: .5px solid #fff;
+            display: flex;
+            justify-content: flex-end;
         }
 
         &__close-icon {
