--- a/src/sass/_nav.scss
+++ b/src/sass/_nav.scss
@@ -160,6 +160,7 @@
                 position: relative;
                 padding: 15px;
                 border-bottom: .2px solid #fff;
+                cursor: pointer;
     
                 a:link, a:visited {
                     color: #fff;
