--- a/src/sass/_home.scss
+++ b/src/sass/_home.scss
@@ -1,6 +1,8 @@
 .home {
+    margin-top: 5rem;
+
     .home__card {
-        padding: 8rem 3rem;
+        padding: 3rem 3rem;
         background-image: linear-gradient(to right bottom, #0E538F, #fff);
 
         .home__card-message {
@@ -13,7 +15,7 @@
             background-repeat: no-repeat;
             border-radius: 3px;
             box-shadow: 0 1.5rem 4rem rgba(0,0,0,0.3);
-            height: 40rem;
+            height: 39rem;
 
             .home__card-message-inner {
                 position: absolute;
@@ -32,6 +34,83 @@
                 p {
                     font-size: 1.3rem;
                     margin-bottom: 1rem;
+                }
+            }
+        }
+    }
+}
+
+@media (max-width: 930px) {
+    .home {
+        .home__card {
+            .home__card-message {
+                position: relative;
+                background-image: linear-gradient(180deg, rgba(#E0E0E0, .9) 0%,
+                                                transparent 62%,
+                                                rgba(#E0E0E0, .9) 38%), 
+                                                url(../assets/images/rodney-kettlebells.jpg);
+
+                .home__card-message-inner {
+                    bottom: 0;
+                    width: 100%;
+                    padding-bottom: 10px;
+                }
+            }
+        }
+    }
+}
+
+@media (max-width: 760px) {
+    .home {
+        .home__card {
+            padding: 1rem 1rem;
+            .home__card-message {
+                position: relative;
+                background-image: linear-gradient(180deg, rgba(#E0E0E0, .9) 0%,
+                                                transparent 60%,
+                                                rgba(#E0E0E0, .9) 40%), 
+                                                url(../assets/images/rodney-kettlebells.jpg);
+
+                .home__card-message-inner {
+                    padding: 1rem;
+
+                    h1 {
+                        font-size: 1.4rem;
+                    }
+    
+                    p {
+                        font-size: 1.1rem;
+                        margin-bottom: 1rem;
+                    }
+                }
+            }
+        }
+    }
+}
+
+@media (max-width: 450px) {
+    .home {
+        .home__card {
+            padding: 0;
+            .home__card-message {
+                position: relative;
+                background-image: linear-gradient(180deg, rgba(#E0E0E0, .9) 0%,
+                                                transparent 50%,
+                                                rgba(#E0E0E0, .9) 50%), 
+                                                url(../assets/images/rodney-kettlebells.jpg);
+
+                .home__card-message-inner {
+                    padding: 1rem;
+                    padding-bottom: 2rem;
+
+                    h1 {
+                        font-size: 1.4rem;
+                    }
+    
+                    p {
+                        font-size: 1.1rem;
+                        margin-bottom: 1rem;
+                    }
                 }
             }
         }
