--- a/src/sass/_home.scss
+++ b/src/sass/_home.scss
@@ -2,7 +2,6 @@
     margin-top: 5rem;
 
     .home__card {
-        padding: 3rem 3rem;
         background-image: linear-gradient(to right bottom, #0E538F, #fff);
 
         .home__card-message {
@@ -15,7 +14,7 @@
             background-repeat: no-repeat;
             border-radius: 3px;
             box-shadow: 0 1.5rem 4rem rgba(0,0,0,0.3);
-            height: 39rem;
+            height: 100vh;
 
             .home__card-message-inner {
                 position: absolute;
@@ -44,7 +43,6 @@
     .home {
         .home__card {
             .home__card-message {
-                position: relative;
                 background-image: linear-gradient(180deg, rgba(#E0E0E0, .9) 0%,
                                                 transparent 62%,
                                                 rgba(#E0E0E0, .9) 38%), 
@@ -63,9 +61,7 @@
 @media (max-width: 760px) {
     .home {
         .home__card {
-            padding: 1rem 1rem;
             .home__card-message {
-                position: relative;
                 background-image: linear-gradient(180deg, rgba(#E0E0E0, .9) 0%,
                                                 transparent 60%,
                                                 rgba(#E0E0E0, .9) 40%), 
@@ -91,17 +87,15 @@
 @media (max-width: 450px) {
     .home {
         .home__card {
-            padding: 0;
             .home__card-message {
-                position: relative;
                 background-image: linear-gradient(180deg, rgba(#E0E0E0, .9) 0%,
-                                                transparent 50%,
-                                                rgba(#E0E0E0, .9) 50%), 
+                                                transparent 53%,
+                                                rgba(#E0E0E0, .9) 47%), 
                                                 url(../assets/images/rodney-kettlebells.jpg);
-
+                height: 35rem;
                 .home__card-message-inner {
                     padding: 1rem;
-                    padding-bottom: 2rem;
+                    padding-bottom: .5rem;
 
                     h1 {
                         font-size: 1.4rem;
@@ -109,6 +103,34 @@
     
                     p {
                         font-size: 1.1rem;
+                        margin-bottom: 1rem;
+                    }
+                }
+            }
+        }
+    }
+}
+
+@media (max-width: 350px) {
+    .home {
+        .home__card {
+            padding: 0;
+            .home__card-message {
+                background-image: linear-gradient(180deg, rgba(#E0E0E0, .9) 0%,
+                                                transparent 45%,
+                                                rgba(#E0E0E0, .9) 55%), 
+                                                url(../assets/images/rodney-kettlebells.jpg);
+                height: 35rem;
+                .home__card-message-inner {
+                    padding: 1rem;
+                    padding-bottom: .5rem;
+
+                    h1 {
+                        font-size: 1.4rem;
+                    }
+    
+                    p {
+                        font-size: 1rem;
                         margin-bottom: 1rem;
                     }
                 }
