--- a/src/sass/_home.scss
+++ b/src/sass/_home.scss
@@ -2,139 +2,43 @@
     margin-top: 5rem;
 
     .home__card {
-        background-image: linear-gradient(to right bottom, #0E538F, #fff);
+        position: relative;
+        background-image: linear-gradient(rgba(#E0E0E0, .8) 0%,
+                                        transparent 100%,
+                                        rgba(#E0E0E0, .8) 0%), 
+                                        url(../assets/images/rodney-kettlebells.jpg);
+        background-size: cover;
+        background-repeat: no-repeat;
+        border-radius: 3px;
+        box-shadow: 0 1.5rem 4rem rgba(0,0,0,0.3);
+        height: 100vh;
 
-        .home__card-message {
-            position: relative;
-            background-image: linear-gradient(95deg, rgba(#E0E0E0, .9) 0%,
-                                            transparent 62%,
-                                            rgba(#E0E0E0, .9) 38%), 
-                                            url(../assets/images/rodney-kettlebells.jpg);
-            background-size: 100%;
-            background-repeat: no-repeat;
-            border-radius: 3px;
-            box-shadow: 0 1.5rem 4rem rgba(0,0,0,0.3);
-            height: 100vh;
+        .home__card-message-inner {
+            position: absolute;
+            right: 0;
+            height: 100%;
+            clip-path: polygon(25% 0%, 100% 0%, 100% 100%, 0% 100%);
+            width: 45%;
+            background-color: rgba(#E0E0E0, .8);
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
 
-            .home__card-message-inner {
-                position: absolute;
-                right: 0;
-                width: 38%;
-                padding: 4rem;
-                display: flex;
-                flex-direction: column;
-
+            .home__card-message-inner-content {
+                width: 60%;
                 h1, h4 {
                     text-align: center;
                     margin-bottom: 1rem;
                     text-transform: uppercase;
                 }
-
+    
                 p {
-                    font-size: 1.3rem;
+                    font-size: 1.1rem;
                     margin-bottom: 1rem;
                 }
             }
-        }
-    }
-}
 
-@media (max-width: 930px) {
-    .home {
-        .home__card {
-            .home__card-message {
-                background-image: linear-gradient(180deg, rgba(#E0E0E0, .9) 0%,
-                                                transparent 62%,
-                                                rgba(#E0E0E0, .9) 38%), 
-                                                url(../assets/images/rodney-kettlebells.jpg);
-
-                .home__card-message-inner {
-                    bottom: 0;
-                    width: 100%;
-                    padding-bottom: 10px;
-                }
-            }
-        }
-    }
-}
-
-@media (max-width: 760px) {
-    .home {
-        .home__card {
-            .home__card-message {
-                background-image: linear-gradient(180deg, rgba(#E0E0E0, .9) 0%,
-                                                transparent 60%,
-                                                rgba(#E0E0E0, .9) 40%), 
-                                                url(../assets/images/rodney-kettlebells.jpg);
-
-                .home__card-message-inner {
-                    padding: 1rem;
-
-                    h1 {
-                        font-size: 1.4rem;
-                    }
-    
-                    p {
-                        font-size: 1.1rem;
-                        margin-bottom: 1rem;
-                    }
-                }
-            }
-        }
-    }
-}
-
-@media (max-width: 450px) {
-    .home {
-        .home__card {
-            .home__card-message {
-                background-image: linear-gradient(180deg, rgba(#E0E0E0, .9) 0%,
-                                                transparent 53%,
-                                                rgba(#E0E0E0, .9) 47%), 
-                                                url(../assets/images/rodney-kettlebells.jpg);
-                height: 35rem;
-                .home__card-message-inner {
-                    padding: 1rem;
-                    padding-bottom: .5rem;
-
-                    h1 {
-                        font-size: 1.4rem;
-                    }
-    
-                    p {
-                        font-size: 1.1rem;
-                        margin-bottom: 1rem;
-                    }
-                }
-            }
-        }
-    }
-}
-
-@media (max-width: 350px) {
-    .home {
-        .home__card {
-            padding: 0;
-            .home__card-message {
-                background-image: linear-gradient(180deg, rgba(#E0E0E0, .9) 0%,
-                                                transparent 45%,
-                                                rgba(#E0E0E0, .9) 55%), 
-                                                url(../assets/images/rodney-kettlebells.jpg);
-                height: 35rem;
-                .home__card-message-inner {
-                    padding: 1rem;
-                    padding-bottom: .5rem;
-
-                    h1 {
-                        font-size: 1.4rem;
-                    }
-    
-                    p {
-                        font-size: 1rem;
-                        margin-bottom: 1rem;
-                    }
-                }
-            }
         }
     }
 }
