--- a/src/sass/_home.scss
+++ b/src/sass/_home.scss
@@ -3,9 +3,9 @@
 
     .home__card {
         position: relative;
-        background-image: linear-gradient(rgba(#E0E0E0, .8) 0%,
+        background-image: linear-gradient(rgba(#E0E0E0, .6) 0%,
                                         transparent 100%,
-                                        rgba(#E0E0E0, .8) 0%), 
+                                        rgba(#E0E0E0, .6) 0%), 
                                         url(../assets/images/rodney-kettlebells.jpg);
         background-size: cover;
         background-repeat: no-repeat;
@@ -18,7 +18,7 @@
             right: 0;
             height: 100%;
             clip-path: polygon(25% 0%, 100% 0%, 100% 100%, 0% 100%);
-            width: 45%;
+            width: 40%;
             background-color: rgba(#E0E0E0, .8);
             display: flex;
             flex-direction: column;
@@ -27,18 +27,87 @@
 
             .home__card-message-inner-content {
                 width: 60%;
+                margin-left: 2rem;
+                text-align: center;
+
                 h1, h4 {
-                    text-align: center;
                     margin-bottom: 1rem;
                     text-transform: uppercase;
                 }
-    
-                p {
-                    font-size: 1.1rem;
-                    margin-bottom: 1rem;
+
+                h4 {
+                    border: 2px solid #000;
+                    padding: .5rem;
+                    cursor: pointer;
                 }
             }
 
+        }
+    }
+
+    &__programs {
+        width: 90%;
+        padding: 2rem;
+        margin: 0 auto;
+        margin-top: 3rem;
+
+        .home__programs-image {
+            width: 100%;
+            img {
+                width: 100%;
+            }
+        }
+
+        .home__programs-content {
+            margin-top: 1rem;
+            display: flex;
+            flex-direction: row;
+            flex-wrap: wrap;
+            justify-content: space-between;
+
+            p {
+                width: 50%
+            }
+
+            button {
+                padding: .5rem;
+                font-size: 1.1rem;
+                text-transform: uppercase;
+                font-weight: 700;
+                border: 3px solid #000;
+                background: transparent;
+            }
+        }
+
+    }
+}
+
+@media (max-width: 900px) {
+    .home {
+        margin-top: 5rem;
+    
+        .home__card {
+            background-position: center;
+    
+            .home__card-message-inner {
+                bottom: 0;
+                height: 35%;
+                clip-path: none;
+                width: 100%;
+    
+                .home__card-message-inner-content {
+                    width:80%;
+                    margin-left: 0;
+    
+                    h1 {
+                        font-size: 1.3rem;
+                    }
+
+                    h4 {
+                        margin-bottom: 0;
+                    }
+                }
+            }
         }
     }
 }
