--- a/src/sass/_nav.scss
+++ b/src/sass/_nav.scss
@@ -15,10 +15,10 @@
     align-items: center;
 
     &__logo {
-        width: 15rem;
+        width: 10rem;
         margin-left: 1rem;
 
-        h1 {
+        img {
             width: 100%;
         }
     }
