--- a/src/sass/_home.scss
+++ b/src/sass/_home.scss
@@ -3,45 +3,73 @@
 
     .home__card {
         position: relative;
-        background-image: linear-gradient(rgba(#E0E0E0, .6) 0%,
-                                        transparent 100%,
-                                        rgba(#E0E0E0, .6) 0%), 
-                                        url(../assets/images/home-banner.png);
-        background-size: cover;
-        background-repeat: no-repeat;
-        border-radius: 3px;
+        padding: 2rem;
+        background: #0E538F;
         box-shadow: 0 1rem 2.5rem rgba(0,0,0,0.2);
-        height: 100vh;
+        height: 100%;
 
         .home__card-message-inner {
-            position: absolute;
-            right: 0;
-            height: 100%;
-            clip-path: polygon(25% 0%, 100% 0%, 100% 100%, 0% 100%);
-            width: 40%;
-            background-color: rgba(#E0E0E0, .8);
             display: flex;
-            flex-direction: column;
-            justify-content: center;
+            flex-wrap: wrap;
+            justify-content: space-between;
             align-items: center;
 
-            .home__card-message-inner-content {
-                width: 60%;
-                margin-left: 2rem;
-                text-align: center;
+            .home__card-left {
+                width: 50%;
 
-                h1, h4 {
-                    margin-bottom: 1rem;
+                .home__card-image {
+                    width: 100%;
+                    margin-top: 1rem;
+    
+                    img {
+                        width: 100%;
+                        border-radius: 5px;
+                    }
+                }
+            }
+            
+            .home__card-right {
+                position: relative;
+                width: 50%;
+                margin-top: 2rem;
+                display: flex;
+                flex-direction: column;
+
+                h1 {
+                    text-align: center;
+                    font-size: 2.1rem;
+                    color: #fff;
+                    margin-bottom: 2rem;
                     text-transform: uppercase;
                 }
 
-                h4 {
-                    border: 2px solid #000;
+                ul {
+                    position: relative;
+                    left: 50%;
+                    transform: translate(-50%, 0);
+                    width: 70%;
+
+                    li {
+                        font-size: 2.3rem;
+                        color: #fff;
+                        margin-bottom: 2rem;
+                        list-style-type: disc;
+                    }
+                }
+
+                button {
+                    width: 60%;
+                    margin: 1rem auto;
+                    background: transparent;
+                    color: #fff;
                     padding: .5rem;
-                    cursor: pointer;
+                    font-size: 1.7rem;
+                    font-weight: 700;
+                    text-transform: uppercase;
+                    border: 3px solid #fff;
+                    border-radius: 5px;
                 }
             }
-
         }
     }
 
@@ -61,6 +89,7 @@
             width: 100%;
             img {
                 width: 100%;
+                border-radius: 5px;
             }
         }
 
@@ -81,8 +110,42 @@
                 text-transform: uppercase;
                 font-weight: 700;
                 border: 3px solid #000;
+                border-radius: 5px;
                 background: transparent;
                 cursor: pointer;
+            }
+        }
+    }
+}
+
+@media (max-width: 1170px) {
+    .home {
+
+        .home__card {  
+
+            .home__card-message-inner {
+                
+                .home__card-right {
+                    width: 45%;
+
+                    h1 {
+                        font-size: 2rem;
+                    }
+    
+                    ul {
+                        width: 100%;
+                        margin: 0 auto;
+    
+                        li {
+                            font-size: 1.8rem;
+                        }
+                    }
+
+                    button {
+                        font-size: 1.1rem;
+                        width: 70%;
+                    }
+                }
             }
         }
     }
@@ -91,26 +154,38 @@
 @media (max-width: 900px) {
     .home {
         margin-top: 5rem;
-    
+
         .home__card {
-            background-position: center;
+            height: 100%;
     
             .home__card-message-inner {
-                bottom: 0;
-                height: 35%;
-                clip-path: none;
-                width: 100%;
+                display: flex;
+                flex-direction: column;
     
-                .home__card-message-inner-content {
-                    width:80%;
-                    margin-left: 0;
+                .home__card-left {
+                    width: 100%;
+                }
+                
+                .home__card-right {
+                    width: 100%;
+                    flex-direction: column;
     
                     h1 {
-                        font-size: 1.3rem;
+                        font-size: 2rem;
+                    }
+    
+                    ul {
+                        width: 90%;
+                        margin: 0 auto;
+    
+                        li {
+                            font-size: 1.8rem;
+                        }
                     }
 
-                    h4 {
-                        margin-bottom: 0;
+                    button {
+                        font-size: 1.1rem;
+                        width: 70%;
                     }
                 }
             }
