--- a/src/sass/_nav.scss
+++ b/src/sass/_nav.scss
@@ -33,8 +33,12 @@
             padding: 25px 20px;
 
             &:hover {
-                background: #E0E0E0;
+                background: #0E538F;
                 border-radius: 5px;
+
+                a:link, a:visited {
+                    color: #fff;
+                }
             }
 
             &:hover .nav__dropdown {
@@ -50,7 +54,7 @@
         right: -35rem;
         opacity: 0;
         width: 315px;
-        background: #E0E0E0;
+        background: #0E538F;
         border-top: .5px solid #E0E0E0;
         border-radius: 5px;
         transition: all 300ms ease-in-out;
@@ -60,16 +64,16 @@
             padding: 15px 15px;
 
             a:link, a:visited {
-                color: #000;
+                color: #fff;
             }
             
 
             &:hover {
-                background: #0E538F;
+                background: #E0E0E0;
                 border-radius: 5px;
 
                 a:link, a:visited {
-                    color: #fff;
+                    color: #000;
                 }
             }
         }
