--- a/src/sass/_base.scss
+++ b/src/sass/_base.scss
@@ -21,7 +21,8 @@ a:link, a:visited {
 
 h1, h2, h3, h4, h5, h6 {
     font-family: 'Roboto Condensed', sans-serif;
-    font-weight: 800;
+    font-weight: 400;
+    text-transform: uppercase;
 }
 
 li, a, p {
