--- a/src/sass/_home.scss
+++ b/src/sass/_home.scss
@@ -2,7 +2,6 @@
     margin-top: 5rem;
 
     .home__card {
-        position: relative;
         padding: 2rem;
         background-image: url(../assets//images//home-banner.jpg);
         background-size: cover;
@@ -21,6 +20,10 @@
             top: 50%;
             left: 50%;
             transform: translate(-50%, -50%);
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
 
             h2 {
                 margin-bottom: .5rem;
@@ -33,7 +36,7 @@
                 width: 15rem;
                 text-transform: uppercase;
                 font-weight: 700;
-                border: 3px solid #000;
+                border: 2px solid #000;
                 border-radius: 5px;
                 background: transparent;
                 cursor: pointer;
