--- a/src/sass/_nav.scss
+++ b/src/sass/_nav.scss
@@ -238,6 +238,10 @@
             display: block;
         }
 
+        &__logo {
+            width: 8rem;
+        }
+
         &__list {
             display: none;
         }
