--- a/src/sass/_testimonials.scss
+++ b/src/sass/_testimonials.scss
@@ -1,10 +1,11 @@
 .testimonials {
     width: 90%;
     margin: 2.5rem auto;
+    text-align: center;
     overflow: hidden;
     display: grid;
-    grid-template-columns: repeat(6, minmax(150px, 1fr));
-    grid-template-rows: repeat(auto, auto);
+    grid-template-columns: repeat(1, 1fr);
+    grid-template-rows: repeat(1, 1fr);
     grid-gap: 10px;
 
     &__content {
