--- a/src/sass/_about.scss
+++ b/src/sass/_about.scss
@@ -1,3 +1,101 @@
+@mixin grid {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(1, 1fr);
+    grid-gap: 20px;
+}
+
 .about {
-    
+    margin-top: 10rem;
+
+    &__intro {
+        width: 85%;
+        margin: 0 auto;
+        margin-bottom: 2rem;
+        @include grid;
+
+        h2 {
+            margin-bottom: 1rem;
+        }
+
+        p {
+            font-size: 2.5rem;
+        }
+
+        .about__intro-image {
+            width: 100%;
+
+            img {
+                width: 100%;
+            }
+        }
+    }
+
+    &__philosophy {
+        position: relative;
+        width: 100%;
+        height: 50vh;
+        background: #2F2F2F;
+        padding: 4rem;
+        color: #fff;
+
+        h2 {
+            text-align: center;
+            margin-bottom: 1.5rem;
+        }
+
+        .about__philosophy-body {
+            width: 85%;
+            margin: 0 auto;
+            @include grid;
+        }
+    }
+
+    &__background {
+        position: relative;
+        width: 100%;
+        height: 50vh;
+        background: #fff;
+        padding: 4rem;
+        color: #000;
+
+        h2 {
+            text-align: center;
+            margin-bottom: 2rem;
+        }
+
+        .about__background-body {
+            width: 85%;
+            margin: 0 auto;
+            @include grid;
+        }
+    }
+
+    &__certifications {
+        width: 100%;
+        height: 50vh;
+        background: #161616;
+        padding: 4rem;
+        color: #fff;
+
+        h2 {
+            text-align: center;
+            margin-bottom: 2rem;
+        }
+
+        ul {
+            margin: 0 auto;
+
+            li {
+                margin-bottom: .5rem;
+            }
+        }
+
+        .about__certifications__body {
+            width: 85%;
+            margin: 0 auto;
+            @include grid;
+        }
+    }
+
 }
