--- a/src/sass/_base.scss
+++ b/src/sass/_base.scss
@@ -10,6 +10,16 @@ html {
     margin: 0;
 }
 
+.App {
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+}
+
+#footer {
+    margin-top: auto;
+}
+
 li {
     list-style: none;
 }
