--- a/src/sass/_programs.scss
+++ b/src/sass/_programs.scss
@@ -47,6 +47,8 @@
         }
 
         ul {
+            margin-left: 2rem;
+
             li {
                 list-style-type: disc;
                 font-size: 1.2rem;
@@ -64,6 +66,16 @@
             border-radius: 5px;
             background: transparent;
             cursor: pointer;
+        }
+    }
+}
+
+@media (max-width: 900px) {
+    .program {
+        grid-template-columns: repeat(1, 1fr);
+
+        ul {
+            margin-left: 0;
         }
     }
 }
