--- a/src/sass/_contact.scss
+++ b/src/sass/_contact.scss
@@ -1,3 +1,42 @@
 .contact {
+    margin: 0 auto;
     margin-top: 6rem;
+    width: 80%;
+    font-size: 1.2rem;
+
+    label, .contact__submit-btn {
+        margin: 1rem auto;
+    }
+
+    input, textarea {
+        width: 80%;
+        padding: 1rem;
+        border: 1.3px solid #000;
+    }
+
+    input {
+        font-size: 1.2rem;
+    }
+
+    &__form {
+        margin: 0 auto;
+        border-radius: 5px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+
+        .contact__submit-btn {
+            background: transparent;
+            text-transform: uppercase;
+            background: #0E538F;
+            color: #fff;
+        }
+    }
+}
+
+@media (max-width: 700px) {
+    .contact {
+        width: 100%;
+    }
 }
