adds new profile pic

--- a/src/sass/_contact.scss
+++ b/src/sass/_contact.scss
@@ -2,6 +2,7 @@
     margin: 0 auto;
     margin-top: 6rem;
     width: 80%;
+    max-width: 800px;
     font-size: 1.2rem;
 
     label, .contact__submit-btn {
