--- a/src/sass/_home.scss
+++ b/src/sass/_home.scss
@@ -3,7 +3,7 @@
 
     .home__card {
         padding: 2rem;
-        background-image: url(../assets//images//home-banner.jpg);
+        background-image: url(../assets/images/main-banner-min.png);
         background-size: cover;
         background-repeat: no-repeat;
         background-position: center;
