--- a/src/sass/_base.scss
+++ b/src/sass/_base.scss
@@ -31,10 +31,10 @@ a:link, a:visited {
 
 h1, h2, h3, h4, h5, h6 {
     font-family: 'Roboto Condensed', sans-serif;
-    font-weight: 400;
+    font-weight: 700;
     text-transform: uppercase;
 }
 
 li, a, p {
-    font-family: 'Roboto Condensed', sans-serif;
+    font-family: 'Roboto', sans-serif;
 }
