--- a/src/sass/_testimonials.scss
+++ b/src/sass/_testimonials.scss
@@ -1,6 +1,7 @@
 .testimonials {
     width: 50%;
-    margin: 2.5rem auto;
+    margin: 6.5rem auto;
+    margin-bottom: 4.5;
     text-align: center;
     overflow: hidden;
     display: grid;
@@ -8,14 +9,14 @@
     grid-template-rows: repeat(1, 1fr);
     grid-gap: 10px;
 
-    &__content {
-        position: relative;
+    &__scroll {
+        display: flex;
+        flex-direction: column;
         padding: 1rem;
-        border-radius: 5px;
-        border: 1px solid #000;
 
         p {
             margin-bottom: 1rem;
+            font-size: 1.3rem;
         }
     }
 }
