--- a/src/sass/_testimonials.scss
+++ b/src/sass/_testimonials.scss
@@ -20,3 +20,13 @@
         }
     }
 }
+
+@media (max-width: 700px) {
+    .testimonials {
+        width: 80%;
+    
+            p {
+                font-size: 1.2rem;
+            }
+    }
+}
