--- a/src/sass/_base.scss
+++ b/src/sass/_base.scss
@@ -35,6 +35,6 @@ h1, h2, h3, h4, h5, h6 {
     text-transform: uppercase;
 }
 
-li, a, p {
+li, a, p, label, input, textarea {
     font-family: 'Roboto', sans-serif;
 }
