--- a/src/sass/_home.scss
+++ b/src/sass/_home.scss
@@ -163,6 +163,32 @@
     }
 }
 
+@media (max-width: 1100px) {
+    .home {
+        &__programs {
+            flex-direction: column;
+            margin: 4rem 1rem;
+
+            .home__programs-image {
+    
+                img {
+                    width: 100%;
+                    min-width: 100%;
+                    height: 100%;
+                }
+            }
+
+            .home__programs-content {
+                width: 100%;
+
+                p {
+                    font-size: 1.2rem;
+                }
+            }
+        }
+    }
+}
+
 @media (max-width: 900px) {
     .home {
         &__programs {
