--- a/src/sass/_program-calculator.scss
+++ b/src/sass/_program-calculator.scss
@@ -2,7 +2,39 @@
     display: flex;
     flex-direction: column;
     justify-content: start;
-    margin-top: 3rem;
+    margin-top: 1.8rem;
+
+    .calc-container-hidden {
+        display: none;
+    }
+
+    .calc-container-visible {
+        display: block;
+    }
+
+    p {
+        font-size: 1rem;
+        margin: .5rem;
+        margin-left: 0;
+    }
+
+    .title {
+        cursor: pointer;
+        position: relative;
+
+        &::after {
+            content: '\003E\003E';
+            position: absolute;
+            padding-left: .4rem;
+        }
+
+        &.active::after {
+            content: '\003E\003E';
+            transform: rotate(90deg);
+            position: absolute;
+            padding-left: .4rem;
+        }
+    }
 
     h1, h3, p {
         margin-bottom: .5rem;
