--- a/src/sass/_programs.scss
+++ b/src/sass/_programs.scss
@@ -5,6 +5,8 @@
     grid-template-columns: repeat(2, 1fr);
     grid-template-rows: repeat(1, fr);
     grid-gap: 20px;
+    height: 100%;
+    width: 100%;
 
     &__gallery {
         display: grid;
