--- a/src/sass/_contact.scss
+++ b/src/sass/_contact.scss
@@ -5,6 +5,12 @@
     max-width: 800px;
     font-size: 1.2rem;
 
+    .programs {
+        width: 15rem;
+        font-size: 1rem;
+        padding: .5rem;
+    }
+
     h1 {
         text-align: center;
         margin-bottom: 1rem;
