--- a/src/sass/_program-calculator.scss
+++ b/src/sass/_program-calculator.scss
@@ -14,13 +14,14 @@
 
     p {
         font-size: 1rem;
-        margin: .5rem;
+        margin-bottom: .5rem;
         margin-left: 0;
     }
 
     .title {
         cursor: pointer;
         position: relative;
+        margin-bottom: .5rem;
 
         &::after {
             content: '\003E\003E';
@@ -36,7 +37,7 @@
         }
     }
 
-    h1, h3, p {
+    h1, h3 {
         margin-bottom: .5rem;
         text-align: left;
     }
@@ -46,13 +47,21 @@
         flex-direction: column;
         width: 20rem;
 
+        h2 {
+            margin-top: 1rem;
+        }
+
         button {
             position: relative;
             margin-bottom: .3rem;
             padding: .5rem;
-            font-size: 1.2rem;
+            font-size: 1.1rem;
             background: transparent;
             cursor: pointer;
+
+            &:nth-child(1) {
+                margin-top: .3rem;
+            }
 
             &::after {
                 content: '+';
