--- a/src/sass/_footer.scss
+++ b/src/sass/_footer.scss
@@ -52,6 +52,7 @@
 @media (max-width: 860px) {
     .footer {
         flex-direction: column;
+        padding-bottom: 4rem;
 
         &__right {
             flex-direction: column;
