--- a/src/sass/_programs.scss
+++ b/src/sass/_programs.scss
@@ -11,6 +11,7 @@
                              'mid mid mid2 mid2';
         grid-gap: 10px;
         margin-right: 2rem;
+        width: 80%;
 
         .program__gallery-image {
             width: 100%;
