--- a/src/sass/_about.scss
+++ b/src/sass/_about.scss
@@ -13,12 +13,9 @@
     }
 
     h1 {
-        margin-bottom: 1rem;
+        margin-bottom: .5rem;
         text-align: center;
-    }
-
-    h4 { 
-        font-size: 1.2rem;
+        font-size: 1.5rem;
     }
 
     &__intro {
@@ -133,6 +130,7 @@
 
             li {
                 margin-bottom: .5rem;
+                list-style-type: disc;
             }
         }
 
