--- a/src/sass/_contact.scss
+++ b/src/sass/_contact.scss
@@ -1,6 +1,7 @@
 .contact {
     margin: 0 auto;
     margin-top: 8rem;
+    margin-bottom: 3rem;
     width: 80%;
     max-width: 800px;
     font-size: 1.2rem;
