--- a/src/sass/_footer.scss
+++ b/src/sass/_footer.scss
@@ -34,7 +34,7 @@
         ul {
             display: flex;
             justify-content: space-between;
-            width: 26rem;
+            width: 20rem;
             margin-right: 2rem;
 
             li {
@@ -68,6 +68,7 @@
             ul {
                 width: 100%;
                 margin-bottom: 1.5rem;
+                margin-right: 0;
 
                 a:link, a:visited {
                     font-size: 1.1rem;
