--- a/src/sass/_programs.scss
+++ b/src/sass/_programs.scss
@@ -69,6 +69,9 @@
 @media (max-width: 900px) {
     .program {
         flex-direction: column;
+        padding-top: 0rem;
+        padding-left: 1rem;
+        padding-right: 1rem;
 
         &__gallery {
             margin-bottom: 1rem;
