--- a/src/sass/_testimonials.scss
+++ b/src/sass/_testimonials.scss
@@ -2,14 +2,14 @@
     text-align: center;
 
     h1 {
-        font-size: 1.1rem;
+        font-size: 1.3rem;
         text-transform: uppercase;
         font-weight: 700;
         border-bottom: 1.8px solid #fff;
         color: #fff;
         background: transparent;
-        padding-bottom: .2rem;
         cursor: pointer;
+        margin: 0;
 
         a:link, a:visited {
             color: #fff;
