--- a/src/sass/_contact.scss
+++ b/src/sass/_contact.scss
@@ -1,63 +1,14 @@
 .contact {
-    margin: 0 auto;
+    width: 100%;
+    height: 100vh;
     margin-top: 8rem;
-    margin-bottom: 3rem;
-    width: 80%;
-    max-width: 800px;
-    font-size: 1.2rem;
-
-    .programs {
-        width: 15rem;
-        font-size: 1rem;
-        padding: .5rem;
-    }
 
     h1 {
+        color: #000;
         text-align: center;
-        margin-bottom: 1rem;
-    }
-
-    label, .contact__submit-btn {
-        margin: 1rem auto;
-    }
-
-    input, textarea {
-        width: 80%;
-        padding: 1rem;
-        border: 1.3px solid #000;
-    }
-
-    textarea {
-        margin-bottom: 1rem;
-    }
-
-    input {
-        font-size: 1.2rem;
-    }
-
-    &__form {
-        margin: 0 auto;
-        border-radius: 5px;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-
-        .contact__submit-btn {
-            background: transparent;
-            text-transform: uppercase;
-            background: #0E538F;
-            color: #fff;
-        }
     }
 }
 
 @media (max-width: 700px) {
-    .contact {
-        width: 100%;
 
-        input, textarea {
-            width: 90%;
-        }
-    }
 }
