--- a/src/sass/_footer.scss
+++ b/src/sass/_footer.scss
@@ -1,6 +1,9 @@
 .footer {
     position: relative;
     width: 100%;
+    height: 100%;
+    padding: 2rem;
+    padding-bottom: 4rem;
     background: #0E538F;
     display: flex;
     flex-direction: row;
@@ -21,6 +24,7 @@
 
     &__logo {
         width: 10rem;
+        margin: 0 1rem;
 
         img {
             width: 100%;
@@ -34,7 +38,8 @@
         ul {
             display: flex;
             justify-content: space-between;
-            width: 20rem;
+            align-items: center;
+            width: 25rem;
             margin-right: 2rem;
 
             li {
