fixes social icons for mobile

--- a/src/sass/_footer.scss
+++ b/src/sass/_footer.scss
@@ -87,6 +87,11 @@
             margin-bottom: 1rem;
         }
 
+        .media-box {
+            justify-content: center;
+            align-items: center;
+        }
+
         &__social {
     
             ul {
