--- a/src/sass/_programs.scss
+++ b/src/sass/_programs.scss
@@ -7,12 +7,10 @@
 
     &__gallery {
         display: grid;
-        grid-template-areas: 'top top top top'
-                             'mid mid mid2 mid2';
+        grid-template-areas: 'top top top top';
         grid-gap: 10px;
         margin-right: 2rem;
         width: 60%;
-        animation: grid-gap .5s ease-in;
 
         .program__gallery-image {
             width: 100%;
@@ -24,14 +22,6 @@
         .one {
             grid-area: top;
             animation: slide-down .5s ease-in;
-        }
-
-        .two {
-            grid-area: mid;
-        }
-
-        .three {
-            grid-area: mid2;
         }
     }
 
@@ -79,17 +69,6 @@
             margin-bottom: 1rem;
             width: 100%;
         }
-    }
-}
-
-@keyframes grid-gap {
-    0% {
-        grid-gap: 3rem;
-        opacity: 0;
-    }
-    100% {
-        grid-gap: 10px;
-        opacity: 1;
     }
 }
 
