--- a/src/sass/_program-calculator.scss
+++ b/src/sass/_program-calculator.scss
@@ -30,15 +30,15 @@
             position: absolute;
             top: .5rem;
             right: .5rem;
-            width: 45px;
+            width: 30px;
             height: 35px;
             cursor: pointer;
 
             &__btn {
                 position: absolute;
                 top: 1rem;
-                height: 3px;
-                width: 35px;
+                height: 2px;
+                width: 30px;
                 background: #000;
 
                 &:nth-child(1) {
@@ -65,13 +65,6 @@
 
         &::after {
             content: '\003E\003E';
-            position: absolute;
-            padding-left: .4rem;
-        }
-
-        &.active::after {
-            content: '\003E\003E';
-            transform: rotate(90deg);
             position: absolute;
             padding-left: .4rem;
         }
@@ -155,6 +148,20 @@
                 position: absolute;
                 right: .6rem;
             }
+        }
+    }
+}
+
+@media (max-width: 500px) {
+    .program-calculator {
+    
+        .calc-container-inner {
+            width: 95%;
+            padding: 2rem;
+        }
+
+        &__btns {
+            width: 100%;
         }
     }
 }
